--- a/src/css/common.less
+++ b/src/css/common.less
@@ -13,6 +13,28 @@ html, body {
 header {
   .clearfix();
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
+  height: 77px;
+  position: relative;
+
+  .bg{
+    background: @site-color;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+  }
+
+  .container{
+    background: transparent;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    top: 0;
+    left: 0;
+  }
 
   &.site-header {
     position: fixed;
@@ -21,7 +43,6 @@ header {
     width: 100%;
     min-height: 50px;
     border-bottom: 1px solid #666;
-    background: @site-color;
 
     .navbar {
       margin-bottom: 0;
