--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,4 +1,8 @@
 .page-index {
+  header .bg{
+    background: #000;
+    opacity: 0.75;
+  }
   .index-top {
     position: fixed;
     top: 0;
@@ -58,128 +62,113 @@
     margin: 77px auto 0;
   }
 
-  #banner-carousel {
+  #banner{
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
-
-    .carousel-indicators {
-      display: block;
-      width: 30%;
-      left: 100%;
-
-      li {
-        background: #a0a0a0;
-
-        &.active {
-          background: @site-color;
-        }
+    position: relative;
+    max-height: 450px;
+    overflow: hidden;
+    .bg{
+      width: 100%;
+    }
+    .heading{
+      position: absolute;
+      top: 30%; 
+      left: 80px;
+      p{
+        color: #fff;
+      }
+      .name{
+        font-size: 24px;
+      }
+      .title-en{
+        font-size: 42px;
+        margin: 0;
       }
     }
-
-    .carousel-control {
-      display: none;
+    .bottom-block{
+      position: absolute;
+      bottom: 30px;
+      left: 0;
+      width: 100%;
+      padding: 3px;
+    }
+    ul{
+      display: block;  
+      width: 600px;
+      margin: 0 auto;
+      float: none;
+      border: 1px solid #fff;
+      li {
+        display: inline-block;
+        width: 25%;
+        background: #fff;
+        a{
+          padding: 5px 0;
+          text-align: center;
+          color: #666;
+        }
+      }
+      .bd-right{
+        a{
+          border-right: 1px solid #aaa;
+        }
+      }
+      .active{
+        background: #888;
+        a{
+          color: #fff;
+        }
+        a:hover{
+          color: #666;
+        }
+      }
     }
   }
 
-  #advertisement-carousel {
-    .carousel-inner {
-      .item {
-        .clearfix();
-
-        img {
-          float: right;
-        }
-
-        .meeting-caption {
-          width: 35%;
-          text-align: left;
-          text-shadow: none;
-          color: #555;
-          top: 15%;
+  #video-container{
+    .video-slide{
+      overflow: hidden;
+      .thumb{
+        position: relative;
+        overflow: hidden;
+        display: inline-block;
+        a{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          z-index: 50;
           left: 0;
-
-          > i {
-            position: absolute;
-            .square(40px);
-            background: url('../img/icons.png') no-repeat scroll center center;
-          }
-
-          &.meeting-planning {
-            > i {
-              background-position: -68px -2px;
-            }
-          }
-
-          &.meeting-marketing {
-            > i {
-              background-position: -68px -50px;
-            }
-          }
-
-          &.meeting-operation {
-            > i {
-              background-position: -68px -93px;
-            }
-          }
-
-          h5 {
-            padding-left: 2.25rem;
-            font-weight: normal;
-            font-size: 18px;
-          }
-
-          h4 {
-            font-weight: normal;
-            margin: 1rem 0;
-          }
+          top: 0;
+          text-decoration: none;
+          color: #FFF;
+        }
+        .bg{
+          display: none;
+          position: absolute;
+          top: auto;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: #000;
+          opacity: .3;
+          filter: alpha(opacity=30);
+          filter: alpha(opacity=30);
+          z-index: 0;
+          opacity: 1;
+          filter: alpha(opacity=100);
+          -webkit-filter: none;
+          filter: none;
+          background: url(http://i3.tdimg.com/b/20140108/co50.png) 0 bottom repeat-x;
+          background: url(http://r2.ykimg.com/05100000568B971867BC3D1EF902B599) 0 bottom repeat-x;
+          _background: 0;
+        }
+        img{
+          width: 200px;
+          height: 110px;
+          overflow: hidden;
         }
       }
-    }
-
-    .carousel-control-container {
-      .clearfix();
-      position: absolute;
-      width: 3rem;
-      bottom: 20%;
-
-      .organizer {
-        margin-bottom: 1rem;
-        background: #fff;
-        color: @site-color;
-        border-color: @site-color;
-        outline: none;
-      }
-
-      .carousel-control {
-        .square(24px);
-        background: transparent;
-        top: 80%;
-
-        .ad-slide-arrow {
-          display: inline-block;
-          .square(24px);
-          background: url('../img/icons.png') no-repeat scroll center center;
-
-          &.arrow-left {
-            background-position: 0 0;
-
-            &:hover {
-              background-position: 0 -27px;
-            }
-          }
-
-          &.arrow-right {
-            background-position: -29px 0;
-
-            &:hover {
-              background-position: -29px -27px;
-            }
-          }
-        }
-      }
-    }
-
-    .carousel-control-original {
-      display: none;
     }
   }
 
