--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,13 +1,14 @@
 .page-index {
+  background: #000;
   header .bg{
-    background: #000;
-    opacity: 0.75;
+    background: #333;
+    opacity: 0.5;
   }
   .index-top {
     position: fixed;
     top: 0;
     background: #f7f8f8;
-    border-bottom: 1px solid #c6c6c6;
+    border-bottom: 1px solid #999;
     z-index: 100;
 
     .container {
@@ -126,8 +127,11 @@
   }
 
   #video-container{
+    padding: 20px;
+    background: #fff;
     .video-slide{
       overflow: hidden;
+
       .thumb{
         position: relative;
         overflow: hidden;
@@ -142,317 +146,41 @@
           text-decoration: none;
           color: #FFF;
         }
-        .bg{
-          display: none;
-          position: absolute;
-          top: auto;
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background: #000;
-          opacity: .3;
-          filter: alpha(opacity=30);
-          filter: alpha(opacity=30);
-          z-index: 0;
-          opacity: 1;
-          filter: alpha(opacity=100);
-          -webkit-filter: none;
-          filter: none;
-          background: url(http://i3.tdimg.com/b/20140108/co50.png) 0 bottom repeat-x;
-          background: url(http://r2.ykimg.com/05100000568B971867BC3D1EF902B599) 0 bottom repeat-x;
-          _background: 0;
-        }
         img{
-          width: 200px;
-          height: 110px;
+          width: 94%;
+          display: block;
+          margin: 0 auto;
           overflow: hidden;
         }
       }
-    }
-  }
+      .thumb:hover{
 
-  #platform-carousel {
-    .carousel-inner {
-      .item {
-        .clearfix();
-
-        img {
-          float: left;
-          position: relative;
-          left: 5%;
-        }
-
-        .carousel-caption {
-          width: 35%;
-          text-align: left;
-          text-shadow: none;
-          color: #555;
-          top: 35%;
-          left: 60%;
-
-          > i {
-            position: absolute;
-            .square(40px);
-            background: url('../img/icons.png') no-repeat scroll center center;
-          }
-
-          &.connection {
-            > i {
-              background-position: -116px -2px;
-            }
-          }
-
-          &.meeting {
-            > i {
-              background-position: -116px -50px;
-            }
-          }
-
-          &.dating {
-            > i {
-              background-position: -116px -93px;
-            }
-          }
-
-          h5 {
-            padding-left: 2.25rem;
-            font-weight: normal;
-            font-size: 18px;
-          }
-
-          h4 {
-            font-weight: normal;
-            margin: 1rem 0;
-          }
-        }
-      }
-    }
-
-    .carousel-control-container {
-      .clearfix();
-      position: absolute;
-      width: 3rem;
-      left: 60%;
-      bottom: 0;
-
-      .service {
-        margin-bottom: 1rem;
-        background: #fff;
-        color: @site-color;
-        border-color: @site-color;
-        outline: none;
-
-        > i {
-          display: inline-block;
-          .square(28px);
-          background: url('../img/icons.png') no-repeat scroll -29px -61px;
-          margin-right: 8px;
-          vertical-align: middle;
-        }
-      }
-
-      .carousel-control {
-        .square(24px);
-        background: transparent;
-        top: 80%;
-
-        .ad-slide-arrow {
-          display: inline-block;
-          .square(24px);
-          background: url('../img/icons.png') no-repeat scroll center center;
-
-          &.arrow-left {
-            background-position: 0 0;
-
-            &:hover {
-              background-position: 0 -27px;
-            }
-          }
-
-          &.arrow-right {
-            background-position: -29px 0;
-
-            &:hover {
-              background-position: -29px -27px;
-            }
-          }
-        }
-      }
-    }
-
-    .carousel-control-original {
-      display: none;
-    }
-  }
-
-  .advertisement-container,
-  .platform-container,
-  .organizer-cases-container {
-    .heading {
-      margin-top: 3rem;
-      margin-bottom: 2rem;
-
-      h2 {
-        color: #383838;
-
-        > i {
-          display: inline-block;
-          .square(5px);
-          margin: 4px 6px;
-          border-radius: 100%;
-          border: 3px solid #383838;
-        }
-
-        & + div {
-          font-size: @font-size-small;
-          color: #3d4451;
-        }
       }
     }
   }
 
-  .platform-container {
-    margin-bottom: 3rem;
-  }
-
-  .social {
-    img {
-      .size(100%, auto);
-    }
-  }
-
-  .organizer-cases-container {
-    background: #f3f6f8;
-    padding-bottom: 5.5rem;
-
-    .heading p {
-      margin: 1rem 0;
-      color: #595959;
-    }
-    .case-list {
-      margin: 0;
-      padding: 0;
-
-      > li {
-        margin-bottom: 2rem;
-        list-style: none;
-
-        .case-thumbnail {
-          position: relative;
-
-          img {
-            width: 100%;
-          }
-
-          > div {
-            position: absolute;
-            padding: 0 0.5rem;
-            .size(100%, 3rem);
-            bottom: 0;
-            background: rgba(0,0,0,0.2);
-            overflow: hidden;
-
-            span {
-              float: left;
-              color: #fff;
-              margin-top: 1rem;
-
-              i {
-                font-style: normal;
-                margin: 0 3px;
-              }
-
-              &:last-child {
-                float: right;
-                border: 1px solid #fff;
-                border-radius: 3px;
-                padding: 3px 8px;
-              }
-            }
-          }
-
-          &:hover {
-            img {
-              -webkit-filter: saturate(3);
-              -moz-filter: saturate(3);
-              -ms-filter: saturate(3);
-              filter: saturate(3);
-            }
-          }
-        }
-
-        .case-detail {
-          h4 {
-            margin-top: 1rem;
-          }
-
-          .location, .date {
-            color: @site-color;
-
-            i {
-              display: inline-block;
-              .square(18px);
-              background: url("../img/icons.png") no-repeat scroll center center;
-            }
-          }
-          
-          .location i{
-            background-position: -4px -87px;
-          }
-
-          .date i {
-            background-position: -4px -57px;
-          }
-
-          p {
-            margin-top: 0.5rem;
-            color: #595959;
-          }
-
-          a {
-            color: @site-color;
-            font-size: @font-size-small;
-          }
-        }
+  #business {
+    .heading{
+      padding-top: 45px; 
+      padding-bottom: 45px;
+      border-bottom: 1px solid #aaa;
+      background: #fff;
+      h4{
+        text-align: center;
+        color: #888;
+        font-size: 20px;
       }
-    }
-  }
-
-  #qr-code-modal {
-    .modal-dialog {
-      width: 16rem;
-      margin: 10% auto;
-    }
-
-    .modal-content {
-      background: transparent;
-      border: none;
-      box-shadow: none;
-
-      .modal-body {
-        width: 100%;
+      p{
+        text-align: center;
+        text-transform: uppercase;
+        background: #888;
+        color: #fff;
+        width: 150px;
+        padding: 2px;
         margin: 0 auto;
-
-        button {
-          position: absolute;
-          left: 100%;
-          background: #fff;
-          .square(1.25rem);
-          text-align: center;
-          font-size: 18px;
-          line-height: 18px;
-          color: #888;
-          border: 1px solid transparent;
-        }
-
-        img {
-          width: 100%;
-        }
       }
     }
   }
-
 }
 
 
@@ -462,180 +190,7 @@
     margin-top: 110px;
   }
 
-  #banner-carousel {
-    .carousel-indicators {
-      display: none;
-    }
+  #business {
 
-    .carousel-control {
-      display: block;
-      background: transparent;
-    }
-  }
-
-  #advertisement-carousel {
-    .carousel-inner {
-      .item {
-        img {
-          float: none;
-        }
-
-        .meeting-caption {
-          position: relative;
-          width: 100%;
-          text-align: left;
-          text-shadow: none;
-          color: #555;
-          top: 1rem;
-          left: 0;
-
-          h5 {
-            padding-left: 2.25rem;
-            font-weight: normal;
-            font-size: 18px;
-          }
-
-          h4 {
-            font-weight: normal;
-            margin: 1rem 0;
-          }
-        }
-      }
-    }
-
-    .carousel-control-container {
-      position: relative;
-      width: 100%;
-      bottom: 0;
-
-      .carousel-control {
-        display: none;
-      }
-
-      .organizer {
-        margin-top: 0.5rem;
-      }
-    }
-
-    .carousel-control-original {
-      display: block;
-      background: transparent;
-
-      span:first-child {
-        top: 45%;
-      }
-    }
-  }
-
-  #platform-carousel {
-    .carousel-inner {
-      .item {
-        img {
-          float: none;
-          left: 0;
-        }
-
-        .platform-caption {
-          position: relative;
-          width: 100%;
-          text-align: left;
-          text-shadow: none;
-          color: #555;
-          top: 1rem;
-          left: 0;
-
-          h5 {
-            padding-left: 2.25rem;
-            font-weight: normal;
-            font-size: 0.9rem;
-          }
-
-          h4 {
-            font-weight: normal;
-            margin: 1rem 0;
-          }
-        }
-      }
-    }
-
-    .carousel-control-container {
-      position: relative;
-      width: 100%;
-      bottom: 0;
-      left: 0;
-
-      .carousel-control {
-        display: none;
-      }
-
-      .service {
-        margin-top: 1rem;
-        outline: none;
-      }
-    }
-
-    .carousel-control-original {
-      display: block;
-      background: transparent;
-
-      span:first-child {
-        top: 45%;
-      }
-    }
-  }
-
-  .advertisement-container,
-  .platform-container,
-  .organizer-cases-container {
-    margin-bottom: 1rem;
-
-    .heading {
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-
-      h2 {
-        color: #383838;
-        font-size: 1rem;
-
-        > i {
-          display: inline-block;
-          .square(5px);
-          margin: 4px 6px;
-          border-radius: 100%;
-          border: 3px solid #383838;
-        }
-
-        & + div {
-          font-size: @font-size-small;
-          color: #3d4451;
-        }
-      }
-    }
-
-    .carousel-inner .item img {
-      max-width: 80%;
-      margin: 0 auto;
-    }
-  }
-
-  .organizer-cases-container {
-    margin-bottom: 0;
-  }
-
-  #qr-code-modal {
-    .modal-dialog {
-      width: 10rem;
-      margin: 30% auto;
-
-      button {
-        background: #fff;
-        .square(1.25rem);
-        text-align: center;
-        font-size: 24px;
-        line-height: 24px;
-        color: #888;
-        padding: 0;
-      }
-    }
   }
 }
