--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,64 +1,9 @@
 .page-index {
-  min-width: 1000px;
+  min-width: 1140px;
   header .bg{
-    background: #333;
-    opacity: 0.7;
+    background: #000;
+    opacity: 0.3;
   }
-  .index-top {
-    position: fixed;
-    top: 0;
-    background: #f7f8f8;
-    border-bottom: 1px solid #999;
-    z-index: 100;
-
-    .container {
-      height: 100%;
-    }
-
-    ul {
-      float: right;
-      margin: 0 20px 0 0;
-      padding: 0;
-      overflow: hidden;
-
-      li {
-        display: inline-block;
-        list-style: none;
-        margin: 0 5px;
-
-        > i {
-          position: relative;
-          text-indent: -99999px;
-
-          &.split {
-            display: block;
-            position: relative;
-            width: 1px;
-            border-left: 1px solid #acadad;
-            box-shadow: 0px 0px 1px #fff;
-            top: 5px;
-          }
-        }
-
-        &:first-child {
-          i {
-            display: inline-block;
-            .square(30px);
-            background: url('../img/logo3.png') no-repeat scroll center center;
-          }
-        }
-
-        &.login > a {
-          display: block;
-          position: relative;
-          top: 5px;
-          font-size: @font-size-small;
-          color: #666;
-        }
-      }
-    }
-  }
-
   .site-main {
     margin: 0px auto 0;
   }
@@ -66,15 +11,35 @@
   #banner{
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
     position: relative;
-    max-height: 450px;
     overflow: hidden;
-    .bg{
-      width: 100%;
+    .slide{
+      position: relative;
+      img{
+        width: 100%;
+        display: block;
+      }
+      .slick-arrow{
+        position: absolute;
+        z-index: 100;
+        cursor: pointer;
+        i{
+          font-size: 20px;
+          color: #fff;
+        }
+      }
+      .slick-prev-arrow{
+        top: 45%;
+        left: 8px;
+      }
+      .slick-next-arrow{
+        top: 45%;
+        right: 8px;
+      }
     }
     .heading{
       position: absolute;
-      top: 30%; 
-      left: 80px;
+      top: 35%; 
+      left: 140px;
       p{
         color: #fff;
       }
@@ -88,25 +53,36 @@
     }
     .bottom-block{
       position: absolute;
-      bottom: 30px;
+      bottom: 80px;
       left: 0;
       width: 100%;
       padding: 3px;
     }
     ul{
       display: block;  
-      width: 600px;
+      width: 700px;
+      height: 42px;
       margin: 0 auto;
       float: none;
       border: 1px solid #fff;
-      li {
-        display: inline-block;
+      overflow: hidden;
+      padding: 0;
+      li, li:hover{
+        height: 100%;
+        display: block;
         width: 25%;
-        background: #fff;
+        background: #eee;
+        float: left;
         a{
-          padding: 5px 0;
+          width: 100%;
+          display: inline-block;
           text-align: center;
-          color: #666;
+          color: @main-font-color;
+          font-size: 14px;
+          text-decoration: none;
+          margin: 6px 0;
+          height: 30px;
+          padding: 4px;
         }
       }
       .bd-right{
@@ -114,13 +90,10 @@
           border-right: 1px solid #aaa;
         }
       }
-      .active{
+      li.active, li:active{
         background: #888;
-        a{
+        a, a:hover{
           color: #fff;
-        }
-        a:hover{
-          color: #666;
         }
       }
     }
