--- a/src/css/common.less
+++ b/src/css/common.less
@@ -14,6 +14,10 @@ html, body {
   width: 1140px !important;
 }
 
+.site-content{
+  margin-top: 77px; 
+}
+
 header {
   height: 77px;
   .bg{
@@ -107,12 +111,6 @@ header {
       }
     }
   }
-}
-
-.site-main {
-  position: relative;
-  min-height: 100%;
-  margin-top: 77px;
 }
 
 footer {
