--- a/src/css/business.less
+++ b/src/css/business.less
@@ -1,7 +1,7 @@
 .page-business {
   background-color: #f4f5f9;
 
-  .site-main {
+  .site-content {
     &.business {
        div {
         margin: 1.25rem 0;
