--- a/src/css/common.less
+++ b/src/css/common.less
@@ -56,12 +56,11 @@ header {
     }
 
     .navbar-brand {
-      background: url('../img/cdmc-logo-1.png') no-repeat scroll center center;
-      .size(8.25rem, 2rem);
+      width: 200px;
+      height: 48px;
       padding: 0;
-      margin: 15px 20px 15px 0;
-      text-indent: -9999px;
-      background-size: auto 2.25rem;
+      margin: 20px 0 0 0;
+      overflow: hidden;
     }
 
     .navbar-nav {
