--- a/src/css/main.less
+++ b/src/css/main.less
@@ -22,9 +22,8 @@
         position: absolute;
         z-index: 100;
         cursor: pointer;
-        i{
-          font-size: 20px;
-          color: #fff;
+        img{
+          width: 36px;
         }
       }
       .slick-prev-arrow{
@@ -244,7 +243,7 @@
           position: relative;
           padding-bottom: 10px;
           img{
-            width: 54px;
+            width: 40px;
             position: absolute;
             top: 4px;
             left: 0px;
@@ -253,7 +252,7 @@
             text-align: left;
             color: #717071;
             margin: 0;
-            margin-left: 60px;
+            margin-left: 56px;
             font-size: 16px; 
           }
           .big{
