--- a/src/css/business.less
+++ b/src/css/business.less
@@ -46,28 +46,7 @@
         }
       }
 
-      .footer {
-        border: none;
-        box-shadow: none;
-
-        > span {
-          display: inline-block;
-          text-indent: 2px;
-          color: #888;
-        }
-        .qr-code {
-          .square(105px);
-          background: url('../img/QR-code.png') no-repeat scroll center center;
-          background-size: 100%;
-          margin: 10px 0 30px 0;
-        }
-      }
     }
-  }
-
-  footer .qr-code {
-    display: none;
-    visibility: hidden;
   }
 
   .left-block {
@@ -86,5 +65,25 @@
     display: inline-block;
     width:1px; height:100px;
     border-left: 1px solid #000;
+  }
+
+  .sub-ul {
+    list-style-type:none;
+    margin-left: 20px;
+    padding-left:20px;
+    li a{
+      text-align: left;
+      display: inline-block;
+      width: 120%;
+      margin-left: -42px;
+      border-radius: 9px;
+      margin-bottom: 6px;
+    }
+    li.active{
+      a{
+        background: @site-color;
+        color: #fff;
+      }
+    }
   }
 }
