add the subpages for aboutus

--- a/src/css/aboutus.less
+++ b/src/css/aboutus.less
@@ -3,7 +3,7 @@
 
   .site-main {
     &.aboutus {
-      > div {
+      div {
         margin: 0 0 30px 0;
 
         h3 {
@@ -39,28 +39,7 @@
         }
       }
 
-      .footer {
-        border: none;
-        box-shadow: none;
-
-        > span {
-          display: inline-block;
-          text-indent: 2px;
-          color: #888;
-        }
-        .qr-code {
-          .square(105px);
-          background: url('../img/QR-code.png') no-repeat scroll center center;
-          background-size: 100%;
-          margin: 10px 0 30px 0;
-        }
-      }
     }
-  }
-
-  footer .qr-code {
-    display: none;
-    visibility: hidden;
   }
 
   .feature-image {
@@ -81,4 +60,5 @@
      padding-left:20px;
      border-left: 1px solid grey;
    }
+
 }
