--- a/src/css/app.less
+++ b/src/css/app.less
@@ -5,7 +5,7 @@
 @import "hire";
 @import "news";
 @import "contact";
-@import "team";
+@import "events";
 @import "aboutus";
 @import "business";
 @import "group_news";
