--- a/src/css/common.less
+++ b/src/css/common.less
@@ -65,7 +65,7 @@ header {
 
     .navbar-nav {
       position: absolute;
-      right: 100px;
+      right: 0px;
       z-index: 2;
 
       > li {
@@ -83,7 +83,7 @@ header {
           overflow: visible;
         }
 
-        &:hover a::before{
+        &:hover a::before, a.active::after{
           content: ' ';
           width: 100%;
           height: 1px;
@@ -96,9 +96,13 @@ header {
           border-top: 0;
         }
       }
+      &:hover a.active::after{
+        display:none;
+      }
     }
 
     .lang{
+      display: none;
       position: absolute;
       right: 0;
       top: 29px;
