--- a/src/css/events.less
+++ b/src/css/events.less
@@ -1,18 +1,67 @@
 .page-events {
+  .main-event{
+    padding: 10px;
+    margin-bottom: 40px;
+    a{
+      display: inline-block;
+      width: 90%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      margin-bottom: 10px;
+      img{
+        width: 100%;
+      }
+    }
+    p{
+      margin: 0;
+    }
+    .name{
+      font-size: 24px;
+    }
+    .date{
+      background: #53155A;
+      color: #fff;
+      display: inline-block;
+      width: auto;
+      padding: 2px 10px;
+    }
+  }
+  .other-events{
+    a{
+      display: inline-block;
+      width: 49%;
+      height: 100px;
+      overflow: hidden;
+      padding: 5px;
+      img{
+        width: 100%;
+      }
+    }
+  }
+
+  .history-events{
+    text-align: left;
+    a{
+      display: inline-block;
+      margin: 5px;
+    }
+
+  }
   ul.event-list{
+    margin: 0;
+    padding: 0;
     list-style-type: none;
     list-style: none;
+    width: 75%;
     li{
       list-style-type: none;
       list-style: none;
       margin-bottom: 20px;
-      border-bottom: 1px solid #ccc;
       position: relative;
       padding: 5px;
       .thumb{
         display: inline-block;
         width: 200px;
-        height: 80px;
         overflow: hidden;
         img{
           width: 100%;
@@ -21,9 +70,9 @@
       .name{
         position: absolute;
         display: inline-block;
-        left: 230px;
-        top: 0;
-        font-size: 26px;
+        left: 270px;
+        top: 10px;
+        font-size: 20px;
         color: #888;
       }
     }
