--- a/src/css/main.less
+++ b/src/css/main.less
@@ -14,10 +14,6 @@
     overflow: hidden;
     .slide{
       position: relative;
-      img{
-        width: 100%;
-        display: block;
-      }
       .slick-arrow{
         position: absolute;
         z-index: 100;
@@ -35,24 +31,33 @@
         right: 8px;
       }
     }
-    .heading{
-      position: absolute;
-      top: 35%; 
-      left: 140px;
-      p{
-        color: #fff;
+    .banner-item{
+      position: relative;
+      width: 100%;
+      height: 100%;
+      img{
+        width: 100%;
+        display: block;
       }
-      .name{
-        font-size: 24px;
-      }
-      .title-en{
-        font-size: 42px;
-        margin: 0;
+      .heading{
+        position: absolute;
+        top: 35%; 
+        left: 140px;
+        p{
+          color: #fff;
+        }
+        .name{
+          font-size: 24px;
+        }
+        .title-en{
+          font-size: 42px;
+          margin: 0;
+        }
       }
     }
     .bottom-block{
       position: absolute;
-      bottom: 80px;
+      bottom: 30px;
       left: 0;
       width: 100%;
       padding: 3px;
@@ -141,11 +146,16 @@
         height: 220px;
         background: #000;
         &:hover{
+          .link-block img{
+            opacity: 0.8;
+          }
+        }
+        &.video:hover{
           iframe{
             opacity: 1;
           }
-          .link-block img{
-            opacity: 0.8;
+          .desc, .desc-bg{
+            display: none;
           }
         }
 
