add new content and update styles

--- a/src/css/business.less
+++ b/src/css/business.less
@@ -21,7 +21,7 @@
           margin-bottom: 1.5rem;
         }
 
-        img {
+        .img {
           .square(300px);
           float: left;
           padding-right: 10px;
@@ -38,6 +38,10 @@
           text-decoration: none;
           background-color: #53155A;
           color: #ffffff;
+        }
+
+        .nav > li > a {
+          padding: 1px 10px;
         }
 
         a {
