--- a/src/css/aboutus.less
+++ b/src/css/aboutus.less
@@ -1,7 +1,7 @@
 .page-aboutus {
   background-color: #f4f5f9;
 
-  .site-main {
+  .site-content {
     &.aboutus {
       div {
         margin: 0 0 30px 0;
@@ -36,6 +36,11 @@
         a {
           color: #808080;
           text-decoration: none;
+          padding-left: 15px;
+        }
+
+        .nav>li>a {
+           padding: 1px 20px;
         }
       }
 
@@ -43,8 +48,9 @@
   }
 
   .feature-image {
-    background: url('../img/about.png') center repeat;
-    height:200px;
+    background: url('../img/about.png');
+    height:330px;
+    background-size:contain;
     margin-bottom: 2rem;
     position:relative;
   }
@@ -54,11 +60,28 @@
     padding: 0 0 0 15px;
   }
 
-   .sub-ul {
-     list-style-type:none;
-     margin-left: 20px;
-     padding-left:20px;
-     border-left: 1px solid grey;
-   }
+  .sub-ul {
+    list-style-type:none;
+  }
+
+  .ul-block {
+    list-style-type:none;
+    margin-left: 20px;
+    padding-left:20px;
+    > li a{
+      text-align: left;
+      display: inline-block;
+      width: 120%;
+      margin-left: -42px;
+      border-radius: 9px;
+      margin-bottom: 6px;
+    }
+    > li.active {
+      > li a {
+        background: @site-color;
+        color: #fff;
+      }
+    }
+  }
 
 }
