fix the active style for selected li

--- a/src/css/aboutus.less
+++ b/src/css/aboutus.less
@@ -77,7 +77,7 @@
       margin-bottom: 6px;
     }
     > li.active {
-      > li a {
+      > a {
         background: @site-color;
         color: #fff;
       }
