--- a/src/css/aboutus.less
+++ b/src/css/aboutus.less
@@ -69,9 +69,11 @@
     margin-left: 20px;
     padding-left:20px;
     > li a{
+      display: inline-block;
+      width: auto;
       text-align: left;
       display: inline-block;
-      width: 120%;
+      padding: 2px 24px;
       margin-left: -42px;
       border-radius: 9px;
       margin-bottom: 6px;
