--- a/src/css/news.less
+++ b/src/css/news.less
@@ -1,126 +1,35 @@
-.page-news {
-  .site-main {
-    &.news {
-      #news-activity {
-        border: none;
 
-        > li {
-          width: 50%;
-          text-align: center;
-
-          > a {
-            border: none;
-            color: #888;
-
-            &:hover {
-              background: none;
-            }
-          }
-
-          &.active {
-            > a {
-              color: @site-color;
-              border-bottom: 4px solid @site-color;
-            }
-          }
-        }
+  .news-detail{
+    .head-section{
+      .am-itemtitle-element p{
+        font-size: 24px !important;
       }
-
-      #news-activity-details {
-        margin-top: 20px;
-        overflow: hidden;
-
-        .news-item {
-          margin-bottom: 25px;
-          padding-bottom: 25px;
-          border-bottom: 1px solid #d7d7d7;
-          box-shadow: 0 1px 0 #fff;
-          .clearfix();
-
-          > img {
-            max-width: 250px;
-          }
-
-          > div {
-            h3 {
-              color: @site-color;
-              margin-top: 0;
-              margin-bottom: 1rem;
-            }
-
-            .publish-date {
-              position: absolute;
-              top: 0;
-              left: 90%;
-              color: #888;
-            }
-
-            p {
-              color: #888;
-            }
-          }
-        }
+      .am-description-element p{
+        padding: 10px 20px 10px 0;
+        color: #888;
+        font-size: 14px;
+        margin: 0;
+      }
+      .divisions-container{
+        padding: 0;
+        margin-bottom: 10px;
+      }
+    }
+    .sections-container{
+      margin-bottom: 20px;
+      img{
+        display: inline-block;
+        width: 100%;
+        height: auto;
+      }
+      p{
+        text-align: left;
+        text-align: justify;
       }
     }
   }
 
-  footer .qr-code {
-    display: none;
-    visibility: hidden;
-  }
-}
 
 .mobile-view {
-  .site-main {
-    &.news {
-      margin-top: 76px;
-
-      #news-activity {
-        border-bottom: 1px solid #d8d8d8;
-
-        li.active {
-          background: @site-color;
-
-          > a {
-            background: @site-color;
-            color: #fff;
-          }
-        }
-
-        li a h3 {
-          font-size: 0.8rem;
-        }
-      }
-      #news-activity-details {
-        .news-item {
-          > div {
-            h3 {
-              font-size: 0.7rem;
-              margin-bottom: 0.5rem;
-            }
-
-            .publish-date {
-              position: relative;
-              display: inline-block;
-              left: 0;
-              margin-bottom: 0.3rem;
-            }
-
-            p {
-              overflow: hidden;
-              max-height: 1.6rem;
-              text-overflow: ellipsis;
-
-              &::after {
-                content: '……';
-                position: absolute;
-                top: 95%;
-                left: 15px;
-            }
-            }
-          }
-        }
-      }
-    }
-  }
+  
 }
