--- a/src/css/events.less
+++ b/src/css/events.less
@@ -27,15 +27,22 @@
     }
   }
   .other-events{
-    a{
+    p{
       display: inline-block;
       width: 49%;
       height: 100px;
       overflow: hidden;
       padding: 5px;
+      margin: 0;
+      cursor: pointer;
+      border: 1px solid #fff;
       img{
         width: 100%;
+        height: 100%;
       }
+    }
+    p:hover{
+      border: 1px solid @site-color;
     }
   }
 
