--- a/src/css/main.less
+++ b/src/css/main.less
@@ -212,6 +212,12 @@
         }
       }
     }
+    #videoModal{
+      iframe{
+        width: 100%;
+        height: auto;
+      }
+    }
   }
 
   #business {
