--- a/src/css/aboutus.less
+++ b/src/css/aboutus.less
@@ -69,17 +69,24 @@
 
   .ul-block {
     list-style-type:none;
-    margin-left: 20px;
-    padding-left:20px;
-    > li a{
-      display: inline-block;
-      width: auto;
-      text-align: left;
-      display: inline-block;
-      padding: 2px 24px;
-      margin-left: -42px;
-      border-radius: 9px;
-      margin-bottom: 6px;
+    > li{
+      width: 100%;
+      a{
+        position: relative;
+        display: inline-block;
+        width: auto;
+        text-align: left;
+        display: inline-block;
+        padding: 2px 24px;
+        border-radius: 9px;
+        margin-bottom: 6px;
+        .glyphicon{
+          position: absolute;
+          left: 4px;
+          top: 4px;
+        }
+      }
+
     }
     > li.active {
       > a {
