[sean] - update index group biz line and margin/padding

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -240,11 +240,10 @@
   #business {
     margin-bottom: 50px;
     .heading{
-      padding-top: 55px; 
-      padding-bottom: 40px;
-      border-bottom: 1px solid #ddd;
+      padding-top: 35px;
+      border-top: 1px solid #ddd;
       background: #fff;
-      margin-bottom: 80px;
+      margin-bottom: 50px;
       h4{
         text-align: center;
         color: #79828f;
