[sean] - fix style and content

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -262,7 +262,7 @@
         font-weight: lighter;
       }
     }
-    .container{
+    .container-2 {
       text-align: center;
       .feature{
         display: inline-block;
